--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
 <body>
     <!-- Start Navigation Bar -->
     <nav id="home">
-     <div class="container">
-          <div class="topleft">
-              <span class="brand"><a href="#home">Susan Nio</a><span>
-         </div>
-              <ul>
-                 <li><a href="#contact">Contact</a></li>
-                 <li><a href="#portfolio-link">Portfolio</a></li>
-                 <li><a href="#aboutme">About Me</a></li>
-             </ul>       
-      </div>
+        <div class="container">
+            <div class="topleft">
+                <span class="brand"><a href="#home">Susan Nio</a><span>
+            </div>
+            <ul>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#portfolio-link">Portfolio</a></li>
+                <li><a href="#aboutme">About Me</a></li>
+             </ul>  
+            <div class="clearfix"></div>     
+        </div>
     </nav>
     <!-- End Navigation Bar -->
 
@@ -43,7 +44,9 @@
     <section class="about">
         <h3 class="title">About Me</h3>
         <p>Hi, I'm Susan Nio! I'm an aspiring <strong>Full-Stack Developer</strong><i class="fa fa-code"></i></p>
+        <br>
         <p>I'm currently a student in <strong>Hactiv8</strong> and will graduate next September</p>
+        <br>
         <hr>
         <!-- <img src="https://images.unsplash.com/photo-1522199670076-2852f80289c3?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=ab630f082590b51249a9df9975164eb2&auto=format&fit=crop&w=1352&q=80" alt="getting things done"> -->
         <div id="about">
@@ -58,15 +61,15 @@
 
     <!-- Start Portfolio Section -->
     <header>
-    <a class="anchor" id="portfolio-link"></a>
+        <a class="anchor" id="portfolio-link"></a>
         <h3 class="title" id="future">Some of my (future) works</h3>
-        <hr>
+        <!-- <hr> -->
     </header>
 
     <main>
         <div class="work a">
             <img src="https://images.unsplash.com/photo-1472437774355-71ab6752b434?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=dd4d735954f33290fbf984e4eb7abe32&auto=format&fit=crop&w=967&q=80" />
-           <h2>Responsive Web Design</h2>
+            <h2>Responsive Web Design</h2>
             <p class="projects"><i class="fa fa-laptop"></i> 20 projects</p>
             <p class="description">
                 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -132,8 +135,8 @@
             <li><a href="https://api.whatsapp.com/send?phone=6281317611238&text=Hi%2C%20Susan%20Nio%21" target="_blank"><i class="fa fa-whatsapp fa-2x"></i></a></li>
             <li></li>
             <li><a href="mailto:susan.wen88@gmail.com" target="_blank"><i class="fa fa-paper-plane fa-2x"></i></a></li>
-            </ul>
+        </ul>
     </footer>
-    <!-- End Footer -->    
+    <!-- End Footer --> 
 </body>
 </html>
