--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <ul>
             <!-- <li><a href="https://www.facebook.com/susan.wen2" target="_blank"><i class="fa fa-facebook fa-2x"></i></a></li> -->
             <!-- <li><a href="https://www.instagram.com/susannio/" target="_blank"><i class="fa fa-instagram fa-2x"></i></a></li> -->
-            <li><a href="https://github.com/NioSusan/susannio.github.io.git" target="_blank"><i class="fa fa-github fa-2x"></i></a></li>
+            <li><a href="https://github.com/NioSusan/NioSusan.github.io" target="_blank"><i class="fa fa-github fa-2x"></i></a></li>
             <li></li>
             <li><a href="https://www.linkedin.com/in/susan-nio-3313914a/" target="_blank"><i class="fa fa-linkedin fa-2x"></i></a></li>
             <li></li>
