Adding icon logo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="./assets/css/style.css" />
+    <link rel="icon" type="img/png" media="screen" href="./assets/img/susannio-logo.png" />
     <!-- <script src=""></script> -->
 </head>
 <body>
