--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
             </div>
             <ul>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="#portfolio-link">Portfolio</a></li>
+                <li><a href="https://github.com/NioSusan/h8-p0-w6/tree/master/colorGame">Portfolio</a></li>
+ 
+<!--                 <li><a href="#portfolio-link">Portfolio</a></li> -->
                 <li><a href="#aboutme">About Me</a></li>
              </ul>  
             <div class="clearfix"></div>     
